--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.jetradarmobile:android-snowfall:1.2.0'
+    implementation 'com.google.android.material:material:1.0.0'
 }
