--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'com.github.jetradarmobile:android-snowfall:1.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.github.jetradarmobile:android-snowfall:1.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
