--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInActivity"></activity>
+        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".PasswordResetActivity" />
+        <activity android:name=".Sign_UpActivity" />
+        <activity android:name=".SignInActivity" />
         <activity android:name=".SnowChatActivity" />
         <activity android:name=".DirectionsActivity" />
         <activity android:name=".BusinessActivity" />
