--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gosnow_glencoe">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,11 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
+        <activity android:name=".SnowReport.SnowForecastActivity" />
         <activity
             android:name=".SnowChat.ChatsActivity"
-            android:parentActivityName=".SnowChat.SnowChatActivity">
-        </activity>
+            android:parentActivityName=".SnowChat.SnowChatActivity" />
         <activity android:name=".SnowChat.UserProfileActivity" />
         <activity
             android:name=".SnowChat.FindFriendsActivity"
@@ -46,6 +48,10 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9185610794869190~2349428292"/>
     </application>
 
 </manifest>
