--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,9 +17,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:fullBackupContent="true"
+        android:icon="@mipmap/snowflake"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/snowflake"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
@@ -39,7 +41,18 @@
             android:name=".DirectionsActivity"
             android:label="@string/title_activity_directions"/>
         <activity android:name=".AdActivity" />
-        <activity android:name=".SnowReport.SnowForecastActivity" />
+        <activity
+            android:name=".SnowReport.SnowForecastActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".SportActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".BusinessActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".ResortActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SnowChat.ChatsActivity"
             android:parentActivityName=".SnowChat.SnowChatActivity" />
@@ -47,11 +60,15 @@
         <activity
             android:name=".SnowChat.FindFriendsActivity"
             android:parentActivityName=".SnowChat.SnowChatActivity" />
-        <activity android:name=".SnowChat.GroupChatActivity" />
+        <activity
+            android:name=".SnowChat.GroupChatActivity"
+            android:parentActivityName=".SnowChat.SnowChatActivity"/>
         <activity
             android:name=".SnowChat.SettingsActivity"
             android:parentActivityName=".SnowChat.SnowChatActivity" />
-        <activity android:name=".WelcomeActivity">
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -63,15 +80,17 @@
         <activity android:name=".SnowChat.Sign_UpActivity" />
         <activity android:name=".SnowChat.SignInActivity" />
         <activity android:name=".SnowChat.SnowChatActivity" />
-        <activity android:name=".BusinessActivity" />
-        <activity android:name=".ResortActivity" />
-        <activity android:name=".SportActivity" />
-        <activity android:name=".SnowReportActivity" />
+        <activity
+            android:name=".SnowReportActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".MainActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9185610794869190~2349428292" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-9185610794869190~2349428292" />
